--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="de">
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -18,7 +18,7 @@
         <tbody>
           <tr>
             <td class="icon"><i id="icon" class=""></i></td>
-            <td colspan="3" class="aktuell">Aktuelles Wetter:<br><span id="weather_str"></span></td>
+            <td colspan="3" class="aktuell">Current weather:<br><span id="weather_str"></span></td>
           </tr>
         </tbody>
       </table>
@@ -38,7 +38,7 @@
           <tbody>
             <tr>
               <td class="icon"><i id="icon_f" class=""></i></td>
-              <td colspan="3" class="forecast">Wetter für morgen:<br><span id="forecast_str"></span></td>
+              <td colspan="3" class="forecast">Forecast for tomorrow:<br><span id="forecast_str"></span></td>
             </tr>
           </tbody>
         </table>
